--- a/leetcode-answers/d2.md
+++ b/leetcode-answers/d2.md
@@ -78,7 +78,7 @@ func generateMatrix(n int) [][]int {
 
 接下来就是数字填充，核心是遵循左闭右开。无论是按照视频里的offset去缩圈还是自己写的，都要保持一致性。对于奇数n，转完填充最中心，偶数转完直接return。
 ![图片1：左闭右开转圈示意图](./images/spiral-left-closed-right-open.png)
-
+反思：反复写k的时候犹豫了一下，忘记了go变量的作用域只在{}中
 
 ### 58 区间和 ACM模式
 ```
